Fix responsiveness of log-in and sign-up page on mobile devices

--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -101,7 +101,7 @@ label {
 input {
     border: 1px solid #000000;
     border-radius: 5px;
-    width: 450.37px;
+    width: 100%;
     height: 67.78px;
     gap: 0px;
     border-radius: 10px 10px 10px 10px;
@@ -127,7 +127,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    width: 450.37px;
+    width: 100%;
     height: 72px;
 }
 
@@ -188,4 +188,14 @@ a:hover {
 
 .profile-circle{
     transform: scale(0.8);
+}
+
+@media only screen and (max-width: 750px) {
+    .left {
+        width: 100%;
+    }
+    .right {
+        width: 0;
+        visibility: hidden;
+    }
 }
